<resources>
    <string name="app_name">MobileAppProject</string>
    <string name="home">Home</string>
    <string name="myTasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="greeting">Welcome Back!\nHere\'s the to-do\'s today!</string>
    <string name="add_button">Add</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_dialog_hint">Enter myTask name</string>
    <string name="add_dialog_desc">Enter description (Optional)</string>
    <string name="add_dialog_notif">Notify?</string>

    <string name="api_key">AIzaSyBuLxjCEfnGwKTPOgiClUB_J4WCec_zApI</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_placeholder">Home Screen Placeholder Text</string>
    <string name="tasks_placeholder">Tasks Screen Placeholder Text</string>
    <string name="calendar_placeholder">Calendar Screen Placeholder Text</string>
</resources>
