<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">


    <EditText
        android:id="@+id/dialogInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_dialog_hint"
        android:singleLine="true"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/dialogOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:padding="2dp"


        />

    <Button
        android:id="@+id/dialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:padding="2dp"

        />
    </LinearLayout>

</LinearLayout>